fixed readability on the footer Updated map.json

--- a/deploy/htdocs/version/src/inc/style/component/_footer.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_footer.scss
@@ -140,8 +140,11 @@
 		}
 
 		.contact-option {
-			font-size: mobile-size(2.4rem);
 			width: 100%;
+
+			.link {
+				font-size: mobile-size(2.4rem);
+			}
 
 			&:not(:first-child) {
 				margin: 0;
